--- a/index.html
+++ b/index.html
@@ -4,10 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
     <title>Week 9 Challenge</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Vertically centering with CSS</h1> 
+
+<!-- table -->
+<h2 class="title">table</h2>
+<div class="table">
+  <p>Center me!</p>
+</div>
+<!-- flexbox -->
+<h2 class="title">flexbox</h2>
+
+<div class="flexbox">
+  <p>Center me!</p>
+</div>
+
+<!-- grid -->
+<h2 class="title">grid</h2>
+
+<div class="grid">
+  <p>Center me!</p>
+</div>
+
+<!-- flexbox and grid margins -->
+<h2 class="title">margins</h2>
+
+<div class="margins">
+  <p>Center me!</p>
+<!--   <img src="https://unsplash.it/250/250" alt=""> -->
+</div>
 </body>
-</html>
+</html
